rewrote the progressbar to use an after rather than sub element, this fixes the outline alignment being off by the 2px outline offset

--- a/css/style.css
+++ b/css/style.css
@@ -217,15 +217,22 @@ input[type="radio"]:focus {
 
 /* Progress bar */
 
-.progress-bar {
+.quiz-footer-progress-bar {
     margin-top: 20px;
     padding: 2px;
-    border: 2px solid var(--color-font);
+    outline: 2px solid var(--color-font);
+    outline-offset: 2px;
+    height: 10px;
+    position: relative;
 }
 
-.progress-bar-fill {
-    background-color: var(--color-font);
+.quiz-footer-progress-bar::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
     height: 10px;
-    width: 0%;
+    width: var(--progress-bar-progress, 0%);
+    background-color: var(--color-font);
     transition: width 0.5s ease-in-out;
 }
